--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+ï»¿<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="appname">Caméra</string>
-    <string name="hello">MaclawStudios Caméra - Beta 1</string>
-    <string name="unsupported">Modèle non pris en charge !</string>
+    <string name="appname">CamÃ©ra</string>
+    <string name="hello">MaclawStudios CamÃ©ra - Beta 1</string>
+    <string name="unsupported">ModÃ¨le non pris en charge !</string>
     <string name="error">Une erreur s'est produite&#8230;</string>
 </resources>
